--- a/package.json
+++ b/package.json
@@ -3,12 +3,21 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@react-three/drei": "^9.80.3",
+    "@react-three/fiber": "^8.13.6",
+    "@react-three/gltfjsx": "^4.3.4",
+    "@react-three/postprocessing": "^2.15.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.10.1",
+    "react-router-dom": "^6.14.2",
     "react-scripts": "5.0.1",
+    "three": "^0.155.0",
+    "three-orbitcontrols-ts": "^0.1.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
